<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_top"
        android:icon="@drawable/flash_white"
        android:title="@string/top" />

    <item
        android:id="@+id/navigation_playlist"
        android:icon="@drawable/playlist"
        android:title="@string/playlist" />

    <item
        android:id="@+id/navigation_downloaded"
        android:icon="@drawable/download_white"
        android:title="@string/downloaded" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />


</menu>
